<resources>
    <string name="app_name">HomeWised</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>
    <string name="jobid"><b>JOb ID -1234</b></string>
    <string name="time">11-10-2015<b>02PM-05PM</b></string>
    <string name="address">Mark Hiller Phone-201 345 567</string>

    <string name="productname">Product Name<font color="red">( required)</font></string>
    <string name="description">Description <font color="red">(required)</font></string>
    <string name="brandname">Brand Name <font color="red">(required)</font></string>
    <string name="serialnumber">Serial Number <font color="red">(required)</font></string>
    <!-- Edit Job-->
    <string name="edit_jobid">Job ID <font color="red"> *</font></string>
    <string name="addsubjob">Add Sub Job</string>
    <string name="title">Title <font color="red"> *</font></string>
    <string name="type">Type<font color="red">*</font></string>
    <string name="status">Status <font color="red">*</font></string>
    <string name="notes">Notes<font color="red">*</font></string>
    <string name="categort">Category<font color="red">*</font></string>

<!--Login Page-->
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <!--ADD Item Button-->
    <string name="catalog">Catalog<font color="red">*</font></string>
    <string name="itemname">ItemName<font color="red">*</font></string>
    <string name="itemnumber">ItemNumber<font color="red">*</font></string>
    <string name="manufacturer">Manufacturer<font color="red">*</font></string>
    <string name="descript">Description<font color="red">*</font></string>


<!--Address -->
    <string name="firstname"> First Name<font color="red">*</font></string>
    <string name="lastname"> Last Name<font color="red">*</font></string>
    <string name="phone">Phone<font color="red">*</font></string>
    <string name="address1">Address 1<font color="red">*</font></string>
    <string name="city">City<font color="red">*</font></string>
    <string name="state">State<font color="red">*</font></string>
    <string name="zipcode">Zipcode<font color="red">*</font></string>
    <string name="country">Country<font color="red">*</font></string>
    <string name="preferred_communcation">Preferred Communcation<font color="red">*</font></string>


    <!--Leads Details-->
    <string name="testaddress">Test Address,\nTest City,MI,11111</string>
    <string name="viewcustomeraddress">For Worth\n 400 E Royal Lane\n lrving,TX-75039</string>


    <string name="schedule_address">400 E Royal Lane,\nUS,TX,75039.</string>
    <string-array name="colorNames">
        <item name="Never">Never</item>
        <item name="Enablegps">Enable GPS</item>

    </string-array>

    <string-array name="colorValues">
        <item name="Never">Never</item>
        <item name="Enablegps">Enable GPS</item>
    </string-array>


    <string-array name="iconFile">
        <item>ic_green</item>
        <item>ic_yellow</item>
        <item>ic_red</item>
    </string-array>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>Appointment</item>
        <item>Customers</item>
        <item>Leads</item>
        <item>My Profile</item>
        <item>Invoices</item>
        <item>Catalog</item>
        <item>Contact Support</item>
        <item>Settings </item>
        <item>Sing Out</item>
    </string-array>
    <string-array name="navDrawerIcons">

        <item>@drawable/appointment</item>
        <item>@drawable/customers</item>
        <item>@drawable/leads</item>
        <item>@drawable/profile</item>
        <item>@drawable/invoices</item>
        <item>@drawable/catalog</item>
        <item>@drawable/info</item>
        <item>@drawable/signout</item>


    </string-array>
    <string-array name="states">
        <item>States</item>
        <item>Alabama (AL)</item>
        <item>Alaska (AK)</item>
        <item>American Samoa (AS)</item>
        <item>Arizona (AZ)</item>
        <item>Arkansas (AR)</item>
        <item>California (CA)</item>
        <item>Colorado (CO)</item>
        <item>Connecticut (CT)</item>
        <item>Delaware (DE)</item>
        <item>District of Columbia (DC)</item>
        <item>Federated States of Micronesia (FM)</item>
        <item>Florida (FL)</item>
        <item>Georgia (GA)</item>
        <item>Guam (GU)</item>
        <item>Hawaii (HI)</item>
        <item>Idaho (ID)</item>
        <item>Illinois (IL)</item>
        <item>Indiana (IN)</item>
        <item>Iowa (IA)</item>
        <item>Kansas (KS)</item>
        <item>Kentucky (KY)</item>
        <item>Louisiana (LA)</item>
        <item>Maine (ME)</item>
        <item>Marshall Islands (MH)</item>
        <item>Maryland (MD)</item>
        <item>Massachusetts (MA)</item>
        <item>Michigan (MI)</item>
        <item>Minnesota (MN)</item>
        <item>Mississippi (MS)</item>
        <item>Missouri (MO)</item>
        <item>Montana (MT)</item>
        <item>Nebraska (NE)</item>
        <item>Nevada (NV)</item>
        <item>New Hampshire (NH)</item>
        <item>New Jersey (NJ)</item>
        <item>New Mexico (NM)</item>
        <item>New York (NY)</item>
        <item>North Carolina (NC)</item>
        <item>North Dakota (ND)</item>
        <item> Northern Mariana Islands (MP)</item>
        <item>Ohio (OH)</item>
        <item>Oklahoma (OK)</item>
        <item>Oregon (OR)</item>
        <item> Palau (PW)</item>
        <item>Pennsylvania( PA)</item>
        <item>Puerto Rico (PR)</item>
        <item>Rhode Island (RI)</item>
        <item>South Carolina (SC)</item>
        <item>South Dakota (SD)</item>
        <item>Tennessee (TN)</item>
        <item>Texas (TX)</item>
        <item>Utah (UT)</item>
        <item>Vermont (VT)</item>
        <item>Virgin Islands (VI)</item>
        <item>Virginia (VA)</item>
        <item>Washington (WA)</item>
        <item>West Virginia (WV)</item>
        <item>Wisconsin (WI)</item>
        <item>Wyoming (WY)</item>
    </string-array>

    <string name="title_appointent">Appointment</string>
    <string name="title_customers">Customers</string>
    <string name="title_leads">Leads</string>
    <string name="title_myprofile">My Profile</string>
    <string name="title_invoices">Invoices</string>
    <string name="title_catalog">Catalog</string>
    <string name="title_contact_support">Contact Support</string>
    <string name="title_sight_out">Sing Out</string>
    <string name="FieldAutomate"><b>FIELD</b> AUTOMATE</string>
</resources>