<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    android:background="@color/white"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"

        android:weightSum="1">


        <TextView
            android:id="@+id/text_cusname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.80"
            android:text="Accepted"
            android:textSize="20dp" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="30dp"

            android:layout_weight="0.20"
            android:src="@drawable/rightarrow" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"


        android:background="@color/gray_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:layout_weight="0.70"
            android:orientation="vertical">

            <TextView
                android:id="@+id/jobid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/jobid"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/text_airconditon_repair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"


                android:text="Air Conditioning Reapir"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/text_airconditon_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"

                android:text="@string/time"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/text_airconditon_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"

                android:text="@string/address"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/text_cust"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_airconditon_address"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:text="CUST_1019"
                android:textSize="15dp" />

            <Button
                android:id="@+id/btn_schedule"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="40dp"

                android:background="@drawable/all_buttons_bluecolor"
                android:gravity="right"
                android:padding="10dp"
                android:text="Scheduled "
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="50dp"

            android:layout_height="170dp"
            android:layout_weight="0.30"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/mapmarker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/mapmarker" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:src="@drawable/rightarrow" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>