<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F3F3"
    android:orientation="vertical"
    tools:context="info.androidhive.HomeWised.com.nunc.android.HomWised.Fragment.HomeFragment">


    <!--<LinearLayout
        android:id="@+id/lin_address_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical"
        >
-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:button="@drawable/custom_checkbox"
                android:text="Check Box"
                android:visibility="gone" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="Check Box"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"

                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/all_corner_bluecolor"
                    android:gravity="center"
                    android:text="Cancel"
                    android:textColor="@color/blue"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_done"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/all_corner_bluecolor"
                    android:gravity="center"
                    android:text="Done"
                    android:textColor="@color/blue"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/text_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:text="Type "
                android:textSize="18dp" />

            <EditText
                android:id="@+id/edt_type"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_all_round"
                android:paddingLeft="10dp"
                android:singleLine="true" />

            <TextView
                android:id="@+id/text_address1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/address1"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/edt_address1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_all_round"
                android:inputType="textMultiLine"
                android:paddingLeft="10dp" />

            <TextView
                android:id="@+id/text_address2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="Address 2 "
                android:textSize="18dp" />

            <EditText
                android:id="@+id/edt_address2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_all_round"
                android:inputType="textMultiLine"
                android:paddingLeft="10dp" />

            <TextView
                android:id="@+id/text_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/city"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/edt_city"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_all_round"
                android:paddingLeft="10dp"
                android:singleLine="true" />

            <TextView
                android:id="@+id/text_county"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="County "
                android:textSize="18dp" />

            <EditText
                android:id="@+id/edt_county"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_all_round"
                android:paddingLeft="10dp"
                android:singleLine="true" />

            <TextView
                android:id="@+id/text_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/state"
                android:textSize="18dp" />

            <Spinner
                android:id="@+id/spinner_state"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_all_round"
                android:entries="@array/states"
                android:paddingLeft="10dp"
                 />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/text_zipcode"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.50"
                    android:text="@string/zipcode"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/edt_zipcode"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.50"
                    android:background="@drawable/button_all_round"
                    android:inputType="number"
                    android:maxLength="5"
                    android:paddingLeft="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="gone">


                <TextView
                    android:id="@+id/text_ext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.50"
                    android:text="Ext "

                    android:textSize="18dp" />

                <EditText

                    android:id="@+id/edt_ext"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.50"
                    android:background="@drawable/button_all_round"
                    android:inputType="number"
                    android:maxLength="5"
                    android:paddingLeft="10dp" />
            </LinearLayout>


            <TextView
                android:id="@+id/text_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/country"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/edt_country"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_all_round"
                android:paddingLeft="10dp"
                android:singleLine="true" />
            <CheckBox
                android:id="@+id/check_serviceaddress"
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:paddingLeft="20dp"
                android:layout_marginBottom="10dp"
                android:button="@drawable/custom_checkbox"
                android:layout_height="wrap_content"
                android:text="Service Address" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_all_round"
                android:orientation="horizontal"
                android:weightSum="1">



                <TextView

                    android:id="@+id/text_defaultaddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.90"
                    android:text="Default Address"
                    android:textSize="18dp" />

                <Switch
                    android:id="@+id/switch_defaultaddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center_vertical"
                    android:checked="true"
                    android:gravity="right" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:visibility="gone"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_all_round"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/text_serviceaddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.90"
                    android:text="Service Address"
                    android:textSize="18dp" />

                <Switch
                    android:id="@+id/switch_serviceaddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:checked="true"
                    android:gravity="right" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:visibility="gone"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_all_round"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/text_billingaddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.90"
                    android:text="Billing Address"
                    android:textSize="18dp" />

                <Switch
                    android:id="@+id/switch_billingaddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:checked="true"
                    android:gravity="right" />

            </LinearLayout>
            <!-- </LinearLayout>-->
        </LinearLayout>
    </ScrollView>
</LinearLayout>